2009-12-15  Adam Barth  <abarth@webkit.org>

        Unreviewed fix for the style-queue.  I suspect this is a recent
        regression from Eric's change below.

        * Scripts/modules/commands/queues.py:

2009-12-15  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Darin Fisher.

        update-webkit-chromium to auto-install gclient

        https://bugs.webkit.org/show_bug.cgi?id=32587

        * Scripts/update-webkit-chromium:

2009-12-15  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool / commit-queue should add results links to bugs when more results are available on the status bot
        https://bugs.webkit.org/show_bug.cgi?id=32546

        You can see an example of this working in:
        https://bugs.webkit.org/show_bug.cgi?id=32585#c3

        * QueueStatusServer/queue_status.py:
         - Output the id of the newly created status.
        * Scripts/modules/commands/queues.py:
         - Tweak the commit-queue logging to include a full status link.
        * Scripts/modules/statusbot.py:
         - update_status should return the newly created status id.

2009-12-15  Andras Becsi  <abecsi@inf.u-szeged.hu>

        Reviewed by Tor Arne Vestbø.

        [Qt] Rename Qt DRT components to match other ports' naming convention and to be more understandable.

        * DumpRenderTree/qt/DumpRenderTree.cpp: Removed.
        * DumpRenderTree/qt/DumpRenderTree.h: Removed.
        * DumpRenderTree/qt/DumpRenderTree.pro: Updated.
        * DumpRenderTree/qt/DumpRenderTreeQt.cpp: Copied from WebKitTools/DumpRenderTree/qt/DumpRenderTree.cpp.
        * DumpRenderTree/qt/DumpRenderTreeQt.h: Copied from WebKitTools/DumpRenderTree/qt/DumpRenderTree.h.
        * DumpRenderTree/qt/GCControllerQt.cpp: Copied from WebKitTools/DumpRenderTree/qt/jsobjects.cpp.
        (GCController::GCController):
        * DumpRenderTree/qt/GCControllerQt.h: Copied from WebKitTools/DumpRenderTree/qt/jsobjects.h.